--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
-            <li>07/2022: Invited talk at the <a href="https://dlg4nlp-workshop.github.io/dlg4nlp-naacl22/schedule">DLG4NLP workshop</a> at NAACL'22: <i>Will Graphs Lead to the Next Breakthrough of Conversational AI?</i></li>
-            <li>06/2022: Our OSU team won the 3rd place in the inaugural <a href="https://www.amazon.science/alexa-prize/three-top-performers-emerge-in-inaugural-alexa-prize-taskbot-challenge"><b>Amazon Alexa Prize TaskBot Challenge</b></a>!</li>
+            <li>07/2022: Invited talk at the <a href="https://dlg4nlp-workshop.github.io/dlg4nlp-naacl22/schedule">DLG4NLP workshop</a> at NAACL'22: <i><a href="resources/Graphs_and_Conversational_AI.pdf">Will Graphs Lead to the Next Breakthrough of Conversational AI?</a></i></li>
+            <li>06/2022: Our OSU team won the 3rd place in the inaugural <a href="https://www.amazon.science/alexa-prize/three-top-performers-emerge-in-inaugural-alexa-prize-taskbot-challenge"><b>Amazon Alexa Prize TaskBot Challenge. Check out our <a href="https://sunlab-osu.github.io/tacobot/">website</a>.</b></a>!</li>
             <li>05/2022: Thank you, Walmart and Cisco, for supporting our research!</li>
             <li>04/2022: Talk at Nanjing University and JD.com on emerging frontiers of conversational AI.</li>
             <li>02/2022: Paper on long-horizon vison-and-language navigation accepted to CVPR 2022.</li>
