--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <li>
                   <span class="paperTitle">Detecting Drug-Drug Interactions Between COVID-19 Therapies and Concomitant Medications Using the FDA Adverse Event Reporting System</span> <br />
                   <span class="paperAuthor">Eugene Jeong, Scott D Nelson, Yu Su, Bradley Malin, Lang Li, You Chen. Frontiers in Pharmacology, 2022</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://www.frontiersin.org/articles/10.3389/fphar.2022.938552/full">paper</a>]</span>
                 <li>
                 <span class="paperTitle">Bridging the Generalization Gap in Text-to-SQL Parsing with Schema Expansion</span> <br />
                 <span class="paperAuthor">Chen Zhao, Yu Su, Adam Pauls, Emmanouil Antonios Platanios. In the Annual Conference of the Association for Computational Linguistics, 2022 (<b>ACL'22</b>)</span>
