--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-, co-advised with Huan Sun)</li>
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-)</li>
             <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (2022-)</li>
-            <li>Jiaman (Lisa) Wu (2022-)</li>
+            <li>Jiaman (Lisa) Wu (2022-, co-advised with Wei-Lun Chao)</li>
         </ul>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
         <ul>
