--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   	<h1>Yu Su</h1>
   	<div id="header">
     	<a href="#">Home</a>
-        <a href="resources/CV_YuSu.pdf">CV</a>
+        <a href="resources/cv.pdf">CV</a>
         <!-- <a href="#experience">Experience</a> -->
         <a href="#teaching">Teaching</a>
         <a href="#student">Students</a>
