--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
+            <li>08/2022: Honored to receive the Inclusive Excellence Assistant Professorship of Engineering from OSU for research and contributions towards democratization of AI!</li>
             <li>08/2022: Paper on question answering over large knowledge graphs accepted to COLING'22. </li>
 	    <li>07/2022: Serve as Senior PC member for AAAI'23. </li>
             <li>07/2022: Invited talk at the <a href="https://dlg4nlp-workshop.github.io/dlg4nlp-naacl22/schedule">DLG4NLP workshop</a> at NAACL'22: <i><a href="resources/Graphs_and_Conversational_AI.pdf">Will Graphs Lead to the Next Breakthrough of Conversational AI?</a></i></li>
