--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
                 <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. arXiv preprint arXiv:2203.08410, 2022</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>]</span>
                 </li>
+                <li>
+                  <span class="paperTitle">Knowledge Base Question Answering: A Semantic Parsing Perspective</span> <br />
+                  <span class="paperAuthor">Yu Gu, Vardaan Pahuja, Gong Cheng, Yu Su. In the Conference on Automated Knowledge Base Construction, 2022 (<b>AKBC'22</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2204.08109">paper</a>]</span>
+                </li>
 		<li>
                 <span class="paperTitle">ArcaneQA: Dynamic Program Induction and Contextualized Encoding for Knowledge Base Question Answering</span> <br />
                 <span class="paperAuthor">Yu Gu and Yu Su. In the International Conference on Computational Linguistics, 2022 (<b>COLING'22</b>)</span>
