--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <h2>Teaching</h2>
         <div class="divider"></div>
         <ul>
+            <li>AU2022: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
             <li>SP2022: CSE5525 - Foundations of Speech and Language Processing</a> (Undergrad & Graduate) </li>
             <li>AU2021: CSE6521 - Introduction to Artificial Intelligence</a> (Graduate) </li>
             <li>AU2020: <a href="courses/au20/cse5539/">CSE5539 - Cutting-Edge Topics in Natural Language Processing</a> (Undergrad & Graduate)</li>
@@ -167,22 +168,26 @@
         <div class="divider"></div>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
         <ul>
-            <li><a href="https://entslscheia.github.io/">Yu Gu</a> (2020-)</li>
-            <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (2020-)</li>
-            <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (2020-)</li>
-            <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (2020-)</li>
-            <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (2021-, co-advised with Huan Sun)</li>
-            <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2021-)</li>
-            <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (2022-)</li>
-            <li>Jiaman (Lisa) Wu (2022-, co-advised with Wei-Lun Chao)</li>
+            <li><a href="https://entslscheia.github.io/">Yu Gu</a> (SP20 &#8211)</li>
+            <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (SP20 &#8211)</li>
+            <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
+            <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (AU20 &#8211)</li>
+            <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
+            <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
+            <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
+            <li>Jiaman (Lisa) Wu (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
+        </ul>
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
+        <ul>
+          <li>Jason Xu (AU22 &#8211)</li>
         </ul>
         <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Undergraduate Students</b></p>
         <ul>
-          <li>Alison Zhong (2022-)</li>
-          <li>Sparsh Kustagishettar (2022-)</li>
-          <li>Clay Washington (2021-)</li>
-          <li>Nikolas McNeal (2021-)</li>
-          <li><a href="#">Sam Stevens</a> (2020-2021) &#x2192; Ph.D. at OSU</li>
+          <li>Alison Zhong (SU22 &#8211)</li>
+          <li>Sparsh Kustagishettar (SU22 &#8211)</li>
+          <li>Clay Washington (AU21 &#8211)</li>
+          <li>Nikolas McNeal (AU21 &#8211)</li>
+          <li><a href="#">Sam Stevens</a> (2020 &#8211 2021) &#x2192; Ph.D. at OSU</li>
         </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
         <ul>
