--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <li>
                   <span class="paperTitle">Knowledge Base Question Answering: A Semantic Parsing Perspective</span> <br />
                   <span class="paperAuthor">Yu Gu, Vardaan Pahuja, Gong Cheng, Yu Su. In the Conference on Automated Knowledge Base Construction, 2022 (<b>AKBC'22</b>)</span>
-                  <span class="paperResource"> [<a href="#"">paper coming soon</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2209.04994"">paper</a>]</span>
                 </li>
 		<li>
                 <span class="paperTitle">ArcaneQA: Dynamic Program Induction and Contextualized Encoding for Knowledge Base Question Answering</span> <br />
