--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
+            <li>10/2022: Papers on broad-coverage conversational AI and GPT-3 in-context learning accepted to EMNLP'22!</li>
             <li>09/2022: New grant from ARL for knowledge-based embodied AI. </li>
             <li>08/2022: Honored to receive the Distinguished Assistant Professorship of Engineering Inclusive Excellence from OSU for research and contributions towards democratizing AI!</li>
             <li>08/2022: Paper on question answering over large knowledge graphs accepted to COLING'22. </li>
@@ -214,12 +215,12 @@
             <ul>
                 <li>
                 <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
-                <span class="paperAuthor">Elias Stengel-Eskin, Emmanouil Antonios Platanios, Adam Pauls, Sam Thomson, Hao Fang, Benjamin Van Durme, Jason Eisner, Yu Su. arXiv preprint arXiv:2205.12228, 2022</span>
+                <span class="paperAuthor">Elias Stengel-Eskin, Emmanouil Antonios Platanios, Adam Pauls, Sam Thomson, Hao Fang, Benjamin Van Durme, Jason Eisner, Yu Su. In the Proc. of the Conference on Empirical Methods in Natural Language Processing, 2022 (<b>EMNLP'22</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2205.12228">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">Thinking about GPT-3 In-Context Learning for Biomedical IE? Think Again</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. arXiv preprint arXiv:2203.08410, 2022</span>
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. Findings of the Conference on Empirical Methods in Natural Language Processing, 2022 (<b>Findings of EMNLP'22</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>]</span>
                 </li>
                 <li>
