--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
+            <li>10/2022: Excited that our <a href="https://arxiv.org/abs/2204.08109">ArcaneQA</a> paper won the Outstanding Paper Award at COLING'22 (top 15 out of 2253 submissions)!</li>
             <li>10/2022: Papers on broad-coverage conversational AI and GPT-3 for biomedical information extraction accepted to EMNLP'22!</li>
             <li>09/2022: New grant from ARL for knowledge-based embodied AI. </li>
             <li>08/2022: Honored to receive the Distinguished Assistant Professorship of Engineering Inclusive Excellence from OSU for research and contributions towards democratizing AI!</li>
