--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
+                <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su. Workshop on Interactive Learning for Natural Language Processing@NeurIPS, 2022 (<b>InterNLP'22</b>)</span>
+                <span class="paperResource"> [<a href="https://internlp.github.io/documents/2022/25.pdf">paper</a>]</span>
+                </li>
                 <li>
                 <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
                 <span class="paperAuthor">Elias Stengel-Eskin, Emmanouil Antonios Platanios, Adam Pauls, Sam Thomson, Hao Fang, Benjamin Van Durme, Jason Eisner, Yu Su. In the Proc. of the Conference on Empirical Methods in Natural Language Processing, 2022 (<b>EMNLP'22</b>)</span>
