--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <a href="#teaching">Teaching</a>
         <a href="#student">Students</a>
         <a href="#publications">Publications</a>
-        <a href="#service">Service</a>
+        <a href="#awards">Awards</a>
+        <a href="#sponsors">Sponsors</a>
+        <!-- <a href="#service">Service</a> -->
 	      <a href="#contact">Contact</a>
-        <!--<a href="#teaching">Teaching</a>
-        <a href="#awards">Awards</a>-->
+        <!--<a href="#teaching">Teaching</a> -->
+        
     </div>
     <div id="contentColumn">
 
@@ -63,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1477501035954454528?s=20">a summary of the major achievements</a> by the OSU NLP group in 2021!</b></li>
+            <li>11/2022: Serve as Workflow Co-Chair for SIGKDD'23.</li>
             <li>10/2022: Excited that our <a href="https://arxiv.org/abs/2204.08109">ArcaneQA</a> paper won the Outstanding Paper Award at COLING'22 (top 15 out of 2253 submissions)!</li>
             <li>10/2022: Papers on broad-coverage conversational AI and GPT-3 for biomedical information extraction accepted to EMNLP'22!</li>
             <li>09/2022: New grant from ARL for knowledge-based embodied AI. </li>
@@ -479,7 +482,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
     </div>
 
 
-    <div class="contentBlock">
+    <!-- <div class="contentBlock">
       <a name="service"></a>
         <h2>Service</h2>
         <div class="divider"></div>
@@ -489,7 +492,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
       <li><b>Program Committee Member</b>: ACL'22, ACL'21, EMNLP'21, NAACL'21, AKBC'21, KDD'21, AAAI'21, KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
       <li><b>Reviewer</b>: TACL, ACL Rolling Review, IEEE TNNLS, IEEE TKDE </li>
         </ul>
-    </div>
+    </div> -->
 
     <!--
     <div class="contentBlock">
@@ -515,24 +518,28 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
     -->
 
 
-    <!-- <div class="contentBlock">
+    <div class="contentBlock">
     	<a name="awards"></a>
-        <h2>Awards</h2>
+        <h2>Awards & Honors</h2>
         <div class="divider"></div>
         <ul>
+            <li>Outstanding Paper Award, COLING, 2022</li>  
+            <li>Distinguished Assistant Professorship of Engineering Inclusive Excellence, OSU, 2022</li>
+            <li>Third-Place Honor, Inaugural Amazon Alexa Prize TaskBot Challenge, 2022</li> 
+            <li>Work at Microsoft Deployed as the Official Conversational Interface for Outlook, 2020</li> 
             <li>Best of IEEE ICDM Selection, 2019</li> 
             <li>Outstanding Dissertation Award of Computer Science, UCSB, 2019</li> 
-	        <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
-            <li>NSF-funded SDM Travel Award, 2016</li>
-            <li>LINK Lab Fellowship, UCSB, 2012</li>
-            <li>Outstanding Graduate, Tsinghua University, 2012</li>
-	        <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li>
+	          <li>Best Distinguished Graduate Student Lecture of CS Summit, UCSB, 2018</li>
+            <!-- <li>NSF-funded SDM Travel Award, 2016</li> -->
+            <!-- <li>LINK Lab Fellowship, UCSB, 2012</li> -->
+            <li>Outstanding Freshman/Graduate, Tsinghua University, 2008/2012</li>
+	        <!-- <li>Merit-based Scholarships, Tsinghua University, 2008-2011</li> -->
         </ul>
-    </div> -->
+    </div>
     
 
     <div class="contentBlock">
-    	<a name="contact"></a>
+    	<a name="sponsors"></a>
         <h2>Sponsers</h2>
         <div class="divider"></div>
         <ul>
