--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         <ul>
             <li><a href="https://entslscheia.github.io/">Yu Gu</a> (SP20 &#8211)</li>
             <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (SP20 &#8211)</li>
-            <li><a href="https://dblp.org/pid/264/4620.html">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
+            <li><a href="https://www.coldbay.net/citations?user=GQ29DQsAAAAJ&hl=en">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
             <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (AU20 &#8211)</li>
-            <li><a href="https://scholar.google.com/citations?user=KXSlX3sAAAAJ&hl=en">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
+            <li><a href="https://chensj98.github.io/">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
             <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
             <li>Jiaman (Lisa) Wu (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
