--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <li>Sparsh Kustagishettar (SU22 &#8211)</li>
           <li>Clay Washington (AU21 &#8211)</li>
           <li>Nikolas McNeal (AU21 &#8211)</li>
-          <li><a href="#">Sam Stevens</a> (2020 &#8211 2021) &#x2192; Ph.D. at OSU</li>
+          <li><a href="https://samuelstevens.me/">Sam Stevens</a> (2020 &#8211 2021) &#x2192; Ph.D. at OSU</li>
         </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
         <ul>
