--- a/index.html
+++ b/index.html
@@ -210,10 +210,20 @@
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://www.semanticscholar.org/author/Yu-Su/1758652">Semantic Scholar</a>)</div>	
 
-            <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p> -->
-            <!-- <ul> -->
-                
-	        <!-- </ul> -->
+          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
+          <ul>
+              <li>
+              <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
+              <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2212.04088, 2022</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>]</span>
+              </li>
+              <!-- <li>
+                <span class="paperTitle">Compositional Generalization for Natural Language Interfaces to Web APIs</span> <br />
+                <span class="paperAuthor">Saghar Hosseini, Ahmed Hassan Awadallah, Yu Su. arXiv preprint arXiv:2112.05209, 2021</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2112.05209">paper</a>]</span>
+                </li>
+              <li> -->
+	        </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
@@ -267,12 +277,6 @@
                 <span class="paperAuthor">Chien-Wei Chiang, Pengyue Zhang, Macarius Donneyong, You Chen, Yu Su, Lang Li. CPT: Pharmacometrics & Systems Pharmacology, 2021 (<b>PSP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://pubmed.ncbi.nlm.nih.gov/34313404/">paper</a>]</span>
                 </li>
-                <li>
-                  <span class="paperTitle">Compositional Generalization for Natural Language Interfaces to Web APIs</span> <br />
-                  <span class="paperAuthor">Saghar Hosseini, Ahmed Hassan Awadallah, Yu Su. arXiv preprint arXiv:2112.05209, 2021</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2112.05209">paper</a>]</span>
-                  </li>
-                <li>
                 <span class="paperTitle">An Investigation of Language Model Interpretability via Sentence Editing</span> <br />
                 <span class="paperAuthor">Samuel Stevens and Yu Su. In the Proc. of the BlackboxNLP Workshop at EMNLP, 2021 (<b>BlackboxNLP'21</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2011.14039">paper</a>]  [<a href="https://github.com/samuelstevens/sentence-editing-interpretability">code and data</a>]</span>
