--- a/index.html
+++ b/index.html
@@ -213,16 +213,20 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
               <li>
+              <span class="paperTitle">Don't Generate, Discriminate: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
+              <span class="paperAuthor">Yu Gu, Xiang Deng, Yu Su. arXiv preprint arXiv:2212.09736, 2022</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>]</span>
+              </li>
+              <li>
+              <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
+              <span class="paperAuthor">Vardaan Pahuja, Boshi Wang, Hugo Latapie, Jayanth Srinivasa, Yu Su. arXiv preprint arXiv:2212.09724, 2022</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
+              </li>
+              <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
               <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2212.04088, 2022</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>]</span>
               </li>
-              <!-- <li>
-                <span class="paperTitle">Compositional Generalization for Natural Language Interfaces to Web APIs</span> <br />
-                <span class="paperAuthor">Saghar Hosseini, Ahmed Hassan Awadallah, Yu Su. arXiv preprint arXiv:2112.05209, 2021</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2112.05209">paper</a>]</span>
-                </li>
-              <li> -->
 	        </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
