--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
               <li>
-              <span class="paperTitle">Don't Generate, Discriminate: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
+              <span class="paperTitle"><i>Don't Generate, Discriminate</i>: A Proposal for Grounding Language Models to Real-World Environments</span> <br />
               <span class="paperAuthor">Yu Gu, Xiang Deng, Yu Su. arXiv preprint arXiv:2212.09736, 2022</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09736">paper</a>]</span>
               </li>
