--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.09724">paper</a>]</span>
               </li>
               <li>
+              <span class="paperTitle">Privacy-Preserving Domain Adaptation of Semantic Parsers</span> <br />
+              <span class="paperAuthor">Fatemehsadat Mireshghallah, Richard Shin, Yu Su, Tatsunori Hashimoto, Jason Eisner. arXiv preprint arXiv:2212.10520, 2022</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.10520">paper</a>]</span>
+              </li>
+              <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
               <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2212.04088, 2022</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>]</span>
