--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               <li>
                 <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
                 <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su. Workshop on Interactive Learning for Natural Language Processing@NeurIPS, 2022 (<b>InterNLP'22</b>)</span>
-                <span class="paperResource"> [<a href="https://internlp.github.io/documents/2022/25.pdf">paper</a>]</span>
+                <span class="paperResource"> [<a href="https://internlp.github.io/documents/2022/papers/25.pdf">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
