--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
+            <li>03/2022: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
             <li>11/2022: Serve as Workflow Co-Chair for SIGKDD'23.</li>
             <li>10/2022: Excited that our <a href="https://arxiv.org/abs/2204.08109">ArcaneQA</a> paper won the Outstanding Paper Award at COLING'22 (top 15 out of 2253 submissions)!</li>
@@ -539,6 +540,7 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Awards & Honors</h2>
         <div class="divider"></div>
         <ul>
+            <li>Lumley Research Award, OSU, 2023</li>  
             <li>Outstanding Paper Award, COLING, 2022</li>  
             <li>Distinguished Assistant Professorship of Engineering Inclusive Excellence, OSU, 2022</li>
             <li>Third-Place Honor, Inaugural Amazon Alexa Prize TaskBot Challenge, 2022</li> 
