--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <li>
               <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
               <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. arXiv preprint arXiv:2212.04088, 2022</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>]</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>]</span>
               </li>
 	        </ul>
 
