--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <ul>
             <li><a href="https://entslscheia.github.io/">Yu Gu</a> (SP20 &#8211)</li>
             <li><a href="https://vardaan123.github.io/">Vardaan Pahuja</a> (SP20 &#8211)</li>
-            <li><a href="https://www.coldbay.net/citations?user=GQ29DQsAAAAJ&hl=en">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
+            <li><a href="https://bernaljg.github.io/">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
             <li><a href="https://chanh.ee/">Chan Hee (Luke) Song</a> (AU20 &#8211)</li>
             <li><a href="https://chensj98.github.io/">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
